# 808x-midterm

./: CMakeLists.txt  README.md  compile_commands.json
.clangd/index/: jacobian.hpp.888F18D671E7FC92.idx  joint_angles.hpp.E5C563D826952DB4.idx  lib.hpp.7B2FB459390D51A5.idx  main.cpp.D4B655FACA4E62CE.idx  main.cpp.ECAE7058A8DA8ABF.idx  src.cpp.0968B0C7653F2471.idx  src.cpp.A16673297BC26E79.idx  src.cpp.BAE666A2FD624432.idx  test.cpp.4DB1C681AC3B4EFA.idx  transform.hpp.3A6BF681BA0E5A77.idx
.github/workflows/: run-unit-test-and-upload-codecov.yml
app/: CMakeLists.txt  main.cpp
docs/html/: annotated.html  classes.html  classjacobian-members.html  classjacobian.html  classjacobian__coll__graph.map  classjacobian__coll__graph.md5  classjacobian_a7eb2fea6f2e217b16bcd3a159f2d1e8f_icgraph.map  classjacobian_a7eb2fea6f2e217b16bcd3a159f2d1e8f_icgraph.md5  classjoint__angles-members.html  classjoint__angles.html  classjoint__angles__coll__graph.map  classjoint__angles__coll__graph.md5  classjoint__angles_a121996be9d68f6b8853d8ddbf709deb9_icgraph.map  classjoint__angles_a121996be9d68f6b8853d8ddbf709deb9_icgraph.md5  dir_000000_000002.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_7d1e3a1f7a6d4a510425215d30485520.html  dir_a01bac68b16142a44fb0be41e49b743d.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  files.html  functions.html  (+31 more)
libs/: CMakeLists.txt
libs/joint_angles/: CMakeLists.txt  joint_angles.hpp  src.cpp
resources/: jacobian.py
results/: cppecheck.txt  cpplint.txt
test/: CMakeLists.txt  main.cpp  test.cpp
(+24 files in other folders)
